--- a/assets/css/add.css
+++ b/assets/css/add.css
@@ -18,6 +18,33 @@ align-items: center;
 min-height:100vh;
 
     }
+.custom-navbar ul li a:hover{
+    text-decoration: underline;
+}
+    .custom-navbar {
+        /* background-color: rgba(255, 255, 255, 0.2) !important; */
+        backdrop-filter: blur(10px) !important;
+        -webkit-backdrop-filter: blur(10px) !important;
+        /* border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important; */
+      }
+      
+      .dropdown-menu {
+        background-color: rgba(0, 0, 0, 0.4) !important;
+        backdrop-filter: blur(8px) !important;
+        -webkit-backdrop-filter: blur(8px) !important;
+        border: none !important;
+      }
+      
+      .dropdown-item {
+        color: white !important;
+      }
+      
+      .dropdown-item:hover {
+        background-color: rgba(255, 255, 255, 0.2) !important;
+      }
+      
+      
+      
     
 .wrapper-1{
     width: 600px;
@@ -173,3 +200,9 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+html {
+    scroll-behavior: smooth;
+  }
+  
+  
