--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -10,28 +10,34 @@
     background: url('../images/2.jpg') no-repeat;
     background-size: cover;
     background-position: center;
- }  */
+ }  */ 
 
+/* body {
+  position: relative;
+  min-height: auto;
+  overflow: hidden;
+  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+  color: #fff; 
+} */
 
- body {
+body {
   position: relative;
   min-height: 100vh;
-  overflow: hidden;
+  overflow: auto;
 }
 
 body::before {
   content: "";
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('../images/2.jpg') no-repeat center center;
-  background-size: cover;
-  filter: blur(20px);
-  transform: scale(1.1); /* Prevents edge blur */
+  background: linear-gradient(135deg, #134e4a, #0f172a);
   z-index: -1;
 }
+
+
 
 
 
@@ -42,6 +48,9 @@ body::before {
         /* background-color: rgba(255, 255, 255, 0.2) !important; */
         backdrop-filter: blur(10px) !important;
         -webkit-backdrop-filter: blur(10px) !important;
+        border-bottom: 2px solid rgba(139, 139, 139, 0.554);
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
         /* border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important; */
       }
       
