--- a/assets/css/view.css
+++ b/assets/css/view.css
@@ -12,28 +12,44 @@
     background-position: center;
  }  */
 
+ html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+  overflow-x: hidden;
+}
 
- body {
-  position: relative;
+.section {
   min-height: 100vh;
-  overflow: hidden;
+  padding-bottom: 2rem;
+}
+
+table {
+  background-color: transparent !important;
+}
+
+.table tbody tr:nth-child(even) {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+
+/* body {
+  position: relative;
+  max-height: auto;
+  overflow: auto;
 }
 
 body::before {
   content: "";
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('../images/2.jpg') no-repeat center center;
-  background-size: cover;
-  filter: blur(20px);
-  transform: scale(1.1); /* Prevents edge blur */
+  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
   z-index: -1;
-}
-
-
+} */
 
 .custom-navbar ul li a:hover{
     text-decoration: underline;
@@ -42,6 +58,8 @@ body::before {
         /* background-color: rgba(255, 255, 255, 0.2) !important; */
         backdrop-filter: blur(10px) !important;
         -webkit-backdrop-filter: blur(10px) !important;
+        border-bottom: 2px solid rgba(139, 139, 139, 0.554);
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         /* border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important; */
       }
       
