--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -117,3 +117,27 @@ text-decoration: underline ;
 .register-link p a:hover{
     text-decoration: underline;
 }
+
+.label{
+    position: absolute;
+    top: 15px;
+    left: 20px;
+}
+
+.input-field:focus ~ .label,
+.input-field:valid ~ .label{
+    position: absolute;
+    top: -10px;
+    left: 20px;
+    font-size: 12px;
+    /* background:transparent; */
+    background-color: rgb(198, 198, 198);
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(20px);
+    /* box-shadow: 0 0 10px rgba(0,0,0,.2); */
+    color: black;
+    padding: 0 8px;
+    border-radius: 20px;
+    transition: all .3s ease;
+}
+
