--- a/assets/css/add.css
+++ b/assets/css/add.css
@@ -25,6 +25,8 @@ min-height:100vh;
         /* background-color: rgba(255, 255, 255, 0.2) !important; */
         backdrop-filter: blur(10px) !important;
         -webkit-backdrop-filter: blur(10px) !important;
+        border-bottom: 2px solid rgba(139, 139, 139, 0.554);
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         /* border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important; */
       }
       
